kubernetes/hdf/chatwoot/deployment-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chatwoot-worker
  namespace: hdf
  labels:
    app.kubernetes.io/name: chatwoot
    app.kubernetes.io/component: worker
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: chatwoot
      app.kubernetes.io/component: worker
  template:
    metadata:
      labels:
        app.kubernetes.io/name: chatwoot
        app.kubernetes.io/component: worker
    spec:
      enableServiceLinks: false
      containers:
        - name: sidekiq
          image: chatwoot/chatwoot:v4.10.1
          imagePullPolicy: IfNotPresent
          command:
            - bundle
            - exec
            - sidekiq
            - -C
            - config/sidekiq.yml
          resources:
            requests:
              cpu: 250m
              memory: 768Mi
            limits:
              memory: 2Gi
