kubernetes/hdf/chatwoot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chatwoot
  namespace: hdf
  labels:
    app.kubernetes.io/name: chatwoot
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: chatwoot
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 3000
      targetPort: http
      protocol: TCP
