kubernetes/hdf/chatwoot/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: chatwoot
  namespace: hdf
spec:
  entryPoints:
    - websecure-external
  routes:
    - match: Host(`support.mcnees.me`)
      kind: Rule
      middlewares:
        - name: public-chain
          namespace: infrastructure
      services:
        - name: chatwoot
          port: 3000
  tls:
    secretName: chatwoot-tls
